# rtindex

./: README.md  start-design-experiments.sh
experiments/src/: CMakeLists.txt  benchmark.py  cuda_helpers.cuh  device_code.cu  main.cu  optix_helpers.cuh  optix_wrapper.cu  test_configuration.h
index-prototype/src/: CMakeLists.txt  benchmarks.cuh  cuda_buffer.cuh  cuda_helpers.cuh  definitions.h  device_code.cu  impl_binsearch.cuh  impl_hashtable.cuh  impl_rtx_index.cuh  impl_scan.cuh  impl_tree.cuh  input_generation.h  launch_parameters.cuh  main.cu  optix_helpers.cuh  optix_pipeline.cu  optix_wrapper.cu  result_collector.h  utilities.h
index-prototype/warpcore/: multi_value_hash_table.cuh
results/: _create-all-plots.py
results/2080ti/: point_query_k32_v32.csv  point_query_k64_v32.csv  range_query_k32_v32.csv  range_query_k64_v32.csv
results/3090/: point_query_k32_v32.csv  point_query_k64_v32.csv  range_query_k32_v32.csv  range_query_k64_v32.csv
results/4090/: point_query_k32_v32.csv  point_query_k64_v32.csv  range_query_k32_v32.csv  range_query_k64_v32.csv
results/4090/experiments/: baseline.csv  exponent-shift.csv  int-to-ray.csv  key-decomposition-uniform.csv  key-decomposition-xy.csv  key-decomposition-xz.csv  key-size.csv  multiple-rays-per-thread.csv  primitive.csv  range-query-start-ray-at-zero.csv  ray-properties.csv  stride.csv  update-locality.csv  update-only.csv  update-then-probe.csv  using-closest-hit.csv
results/a6000/: point_query_k32_v32.csv  point_query_k64_v32.csv  range_query_k32_v32.csv  range_query_k64_v32.csv
results/a6000/experiments/: baseline.csv  exponent-shift.csv  int-to-ray.csv  key-arrangement.csv  key-decomposition-uniform.csv  key-decomposition-xy.csv  key-decomposition-xz.csv  key-size.csv  miss-out-of-range.csv  miss.csv  multiple-rays-per-thread.csv  ordering.csv  primitive.csv  range-query-conversion-mode.csv  range-query-key-arrangement.csv  range-query-key-decomposition.csv  range-query-ordering.csv  range-query-start-ray-at-zero.csv  ray-properties.csv  stride.csv  update-locality.csv  update-only.csv  update-then-probe.csv  (+1 more)
